slowely but surely

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Train Scheduler</title>
     
-    <!--link to firebase for html. not 100% sure if I need this here-->
+    <!--link to firebase. not 100% sure if I need this here-->
     <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
 
     <link rel="stylesheet" href="assets/CSS/style.css">
