--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!--link to firebase. not 100% sure if I need this here-->
     <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+
     <link rel="stylesheet" href="assets/CSS/style.css">
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -24,12 +26,12 @@
         <div class="card bg-light mb-3">
             <div class="card-header p-3 mb-2 bg-dark text-white"">current train schedule</div>
             <div class="card-body">
-                <table class="table table-hover">
+                <table class="table table-hover" id="TrainInfo">
                     <thead>
                       <tr>
                         <th scope="col">Train Name</th>
                         <th scope="col">Destination</th>
-                        <th scope="col">Frequency(min)</th>
+                        <th scope="col">Frequency (min)</th>
                         <th scope="col">Next Arrival</th>
                         <th scope="col">Minutes Away</th>
                       </tr>
